--- a/strandtest/static/ui.html
+++ b/strandtest/static/ui.html
@@ -1,55 +1,76 @@
 <!doctype html>
 <html>
-  <head>
-    <title>RGB Web GUI</title>
-    <style type="text/css">
-        a {
-          display: block;
-          float: left;
-          text-align: center;
-          color: white;
-          line-height: 100px;
-          width: 200px;
-          height: 100px;
-          font-size: 20px;
-          margin: 5px;
-          text-decoration: none;
-	}
-	.red {background:red}
-	.blue {background:blue}
-	.green {background:green}
-  .special {background: orange}
-    </style>
-  </head>
-  <body>
-    <a class="red"   href="/led/red/on">Turn Red LED ON</a>
-    <a class="red"   href="/led/red/off">Turn Red LED OFF</a>
 
-    <a class="blue"  href="/led/blue/on">Turn Blue LED ON</a>
-    <a class="blue"  href="/led/blue/off">Turn Blue LED OFF</a>
+<head>
+  <title>RGB Web GUI</title>
+  <style type="text/css">
+    a {
+      display: block;
+      float: left;
+      text-align: center;
+      color: white;
+      line-height: 100px;
+      width: 200px;
+      height: 100px;
+      font-size: 20px;
+      margin: 5px;
+      text-decoration: none;
+    }
 
-    <a class="green" href="/led/green/on">Turn Green LED ON</a>
-    <a class="green" href="/led/green/off">Turn Green LED OFF</a>
+    .red {
+      background: red
+    }
 
-    <a class="special" href="/led/special/off">Turn Special LED ON</a>
-    <a class="special" href="/led/special/on">Turn Special LED OFF</a>
+    .blue {
+      background: blue
+    }
 
-  
+    .green {
+      background: green
+    }
+
+    .special {
+      background: #F09819;
+      /* fallback for old browsers */
+      background: -webkit-linear-gradient(to right, #EDDE5D, #F09819);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #EDDE5D, #F09819);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    }
+  </style>
+</head>
+
+<body>
+  <a class="red" href="/led/red/on">Turn Red LED ON</a>
+  <a class="red" href="/led/red/off">Turn Red LED OFF</a>
+
+  <a class="blue" href="/led/blue/on">Turn Blue LED ON</a>
+  <a class="blue" href="/led/blue/off">Turn Blue LED OFF</a>
+
+  <a class="green" href="/led/green/on">Turn Green LED ON</a>
+  <a class="green" href="/led/green/off">Turn Green LED OFF</a>
+
+  <a class="special" href="/led/randomeColor/on">Turn Special LED ON</a>
+  <a class="special" href="/led/randomeColor/off">Turn Special LED OFF</a>
 
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript">
-      jQuery(document).ready(function(){ // Triggers when the document is ready
 
-        jQuery('a').on('click',function(e){ // Bind to the "Click" event of all a tags
-          e.preventDefault(); // Prevent leaving the page
-          jQuery.ajax({
-            url: jQuery(this).attr('href'),
-            cache: false
-          });
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript">
+    jQuery(document).ready(function () { // Triggers when the document is ready
+
+      jQuery('a').on('click', function (e) { // Bind to the "Click" event of all a tags
+        e.preventDefault(); // Prevent leaving the page
+        jQuery.ajax({
+          url: jQuery(this).attr('href'),
+          cache: false
         });
+      });
 
-      })
-    </script>
-  </body>
+    })
+  </script>
+</body>
+
 </html>
